<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAE37"
    tools:context=".ForgotPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:backgroundTint="#E3DED8"
        android:layout_height="400sp"
        android:layout_marginTop="60sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30sp"
        >

        <TextView
            android:id="@+id/userForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/first_page_title"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:hint="@string/email_id"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:backgroundTint="@color/black"
            android:autofillHints="TODO"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:autofillHints="TODO"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFAE37"
            android:layout_marginTop="300sp"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:background="@drawable/corners"
            android:text="@string/reset_password"
            />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>